@@ -17,6 +17,11 @@ IF(HAVE_PTSNAME_R)
 	ADD_DEFINITIONS(-DHAVE_PTSNAME_R)
 ENDIF(HAVE_PTSNAME_R)
 
+CHECK_FUNCTION_EXISTS(posix_openpt HAVE_POSIX_OPENPT)
+IF(HAVE_POSIX_OPENPT)
+	ADD_DEFINITIONS(-DHAVE_POSIX_OPENPT)
+ENDIF(HAVE_POSIX_OPENPT)
+
 FILE(GLOB OBDSIM_SRCS
 	*.c *.h
 )
